--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2232,6 +2232,234 @@
 }
 
 
+.blog-one {
+
+    &__text {
+
+        h4 {
+            color: $title;
+            @extend %roboto-500;
+            font-size: 22px;
+            margin: 25 0;
+        }
+    
+        p {
+            margin: 25px 0;
+    
+        }
+    
+        blockquote {
+            background-color: $bg;
+            border-left: 3px solid $accent;
+            padding: 40px;
+            font-size: 22px;
+            @extend %roboto-400;
+            color: $title;
+        }
+
+    }
+
+    
+
+   &__left-img {
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 10px;
+    }
+
+    &__right-img {
+        float: right;
+        margin-right: 30px;
+        margin-bottom: 10px;
+    }
+
+    &__text {
+        border: 1px solid #ececec;
+        border-top: none;
+        padding: 30px;
+        margin-top: -1px;
+    }
+
+    &__info {
+        display: flex;
+        margin-bottom: 25px;
+    }
+
+    &__info-item {
+        position: relative;
+
+
+    }
+
+    &__info-link {
+        padding-left: 24px;
+        margin-right: 30px;
+
+
+        &::before {
+            position: absolute;
+            content: "";
+            background-repeat: no-repeat;
+            left: 0;
+            width: 16px;
+            height: 16px;
+            top: 5px;
+
+        }
+
+
+     
+    }
+
+
+
+
+    &__info-link--date::before {
+        background-image: url('../images/icons/calendar.svg');
+
+       
+    }
+
+
+    &__info-link--comment::before {
+        background-image: url('../images/icons/comment.svg');
+      
+
+    }
+
+    &__info-link--author::before {
+        height: 20px;
+        width: 20px;
+
+        background-image: url('../images/icons/user-red.svg');
+      
+
+    }
+
+
+    &__form-title {
+        font-size: 24px;
+        margin-bottom: 25px;
+        color: $title;
+        @extend %roboto-700;
+        margin: 35px 0 25px;
+
+    }
+
+    &__top {
+        padding: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    
+
+    }
+
+
+    &__top-name {
+        text-transform: uppercase;
+        color: $title;
+    }
+
+    &__top-share {
+       display: flex;
+
+    }
+
+    &__share-name {
+        color: $title;
+        text-transform: uppercase;
+        margin-right: 2px;
+    }
+
+    &__share-links {
+        display: flex;
+        justify-content: space-between;
+
+        
+    }
+
+    &__share-link {
+        margin: 0 5px;
+        vertical-align: middle;
+        path {
+            fill: $default;
+        }
+
+        &:hover {
+            path {
+                fill: $accent;
+            }
+        }
+       
+
+    }
+
+    &__author {
+        padding: 15px 0 40px 0;
+    }
+
+    &__author-img {
+        float: left;
+        margin-right: 30px;
+    }
+
+    &__author-info {
+
+
+    }
+
+    &__author-title {
+        color: $title;
+        text-transform: uppercase;
+        font-size: 22px;
+        @extend %roboto-500;
+        margin-bottom: 25px;
+
+    }
+
+    &__author-text {
+
+    }
+
+
+
+
+    .comments {
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        &__inner {
+            border-bottom: 1px solid #ececec;
+            border-top: 1px solid #ececec;
+            padding: 35px 0;
+            margin-top: 10px;
+
+        }
+
+        &__title {
+            font-size: 24px;
+            margin-bottom: 25px;
+            color: $title;
+            @extend %roboto-700;
+            
+        }
+
+        &__form {
+            border-bottom: none;
+        }
+
+        
+
+      
+    }
+
+    
+}
+
+
 
 
 
