--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2459,6 +2459,166 @@
     
 }
 
+.map {
+    padding: 120px 0;
+}
+
+#map {
+    width: 100%;
+    height: 450px;
+}
+
+
+.contact {
+    padding-bottom: 120px;
+
+    &__inner {
+        display: flex;
+
+    }
+
+    &__info {
+        max-width: 370px;
+        margin-right: 30px;
+    }
+
+    &__info-title {
+        font-size: 48px;
+        color: $title;
+        line-height: 56px;
+        @extend %roboto-700;
+        margin-bottom: 15px;
+    }
+
+    &__info-text {
+        margin-bottom: 60px;
+    }
+
+
+    &__info-list {
+
+    }
+
+    &__info-item {
+        padding-left: 80px;
+        position: relative;
+        margin-top: 55px;
+        color: $title;
+    
+        &::before {
+            content: '';
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            top: -5px;
+            left: 0;
+            box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &::after {
+            position: absolute;
+            content: "";
+            height: 20px;
+            width: 20px;
+            background-repeat: no-repeat;
+            left: 20px;
+            top: 15px;
+
+        }
+
+    }
+
+    &__info-item--phone::after {
+        background-image: url('../images/icons/phone-icon.svg');
+
+    }
+
+    &__info-item--map::after {
+        background-image: url('../images/icons/location-icon.svg');
+        width: 14px;
+        left: 23px;
+    }
+
+
+    &__info-item--mail::after {
+        background-image: url('../images/icons/mail.svg');
+        width: 18px;
+        left: 21px;
+    }
+
+
+    &__info-phone {
+        color: $title;
+        display: block;
+    }
+
+
+    &__form {
+        padding: 60px 40px;
+        width: 770px;
+        box-shadow: 0px 10px 40px 0px rgba(172, 172, 172, 0.3);
+    }
+
+    &__form-title {
+        font-size: 22px;
+        @extend %roboto-700;
+        color: $title;
+        margin-bottom: 25px;
+    }
+
+    &__form-box {
+        display: flex;
+        justify-content: space-between;
+        .contact__form-input {
+            width: 330px;
+        }
+
+    }
+
+    &__form-input {
+        height: 60px;
+        margin-bottom: 30px;
+        width: 100%;
+        padding-left: 25px;
+        border: none;
+        background-color: #f6f6f6;
+    }
+
+    &__form-textarea {
+        padding-left: 25px;
+        padding-top: 25px;
+        width: 100%;
+        height: 200px;
+        margin-bottom: 30px;
+        resize: none;
+        border: none;
+        background-color: #f6f6f6;
+
+        
+    }
+
+
+    &__form-btn {
+        padding: 20px 30px;
+        background-color: $accent;
+        color: #fff;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        border: none;
+        cursor: pointer;
+        box-shadow: 0px 8px 25px 0px rgba(254, 62, 87, 0.3);
+    }
+
+
+
+
+
+
+      
+}
 
 
 
