--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,770 +3,31 @@
 @import 'libs';
 @import 'reset';
 @import 'global';
+@import 'node_modules/slick-carousel/slick/slick';
+@import 'node_modules/@fancyapps/fancybox/dist/jquery.fancybox'; 
+@import 'node_modules/rateyo/src/jquery.rateyo';  
+@import 'node_modules/ion-rangeslider/css/ion.rangeSlider'; 
+@import 'node_modules/jquery-form-styler/dist/jquery.formstyler';
 
 
-.top {
-    &__container {
-        max-width: 1700px;
-        margin: 0 auto;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: top center;
-        padding: 120px 0 130px;
-        text-align: center;
-        
-    }
-}
 
-.top-slider {
-    background-image: url('../images/top-slider bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: $bg;
-    padding-top: 65px;
 
-    &__container {
-        max-width: 1560px;
-    }
 
-    &__content {
-        padding-left: 175px;
-        padding-top: 125px;
-    }
 
-    &__item {
-        display: flex !important;
-        justify-content: space-between;
-    }
 
-    &__title {
-        max-width: 670px;
-        font-size: 58px;
-        line-height: 68px;
-        color: $title;
-        @extend %roboto-700;
-        margin-bottom: 35px;
-    }
 
-    &__text {
-        max-width: 470px;
-        margin-bottom: 55px;
-    }
-    &__link {
-        @extend %btn;
-        letter-spacing: 3px;
-        padding: 14px 36px;
-    }
 
-    .slick-dots {
-        display: flex;
-        justify-content: center;
-        li {
-            padding: 0 5px;
-            line-height: 0;
-            button {
-                padding: 0;
-                font-size: 0;
-                background-color: transparent;
-                width: 26px;
-                height: 26px;
-                border: 1px solid transparent;
-                border-radius: 50%;
-                position: relative;
 
-                &::before {
-                    position: absolute;
-                    content: "";
-                    width: 6px;
-                    height: 6px;
-                    border-radius: 50%;
-                    background-color: $default;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
 
-            }
+// .star {
+//     margin: 0 auto;
+// }
 
-            &.slick-active {
-                button {
-                    border-color: $accent;
-                    &::before {
-                        background-color: $accent;
-                    }
-                }
 
-            }
-        }
-    }
-}
 
 
 
-.categories-info {
-    padding: 120px 0;
-    background-image: url('../images/decor/categories-left.png');
-    background-repeat: no-repeat;
-    background-position: center left;
 
-    &__inner {
-        background-image: url('../images/decor/categories-right.png');
-        background-repeat: no-repeat;
-        background-position: center right
-
-
-    }
-}
-
-.info {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 110px;
-    position: relative;
-    &::before,
-    &::after {
-        content: "";
-        position: absolute;
-    }
-
-    &::before {
-        background-image: url('../images/decor/decor-circles.svg');
-        top: -40px;
-        left: -45px;
-        width: 120px;
-        height: 121px;
-        z-index: -1;
-        
-    }
-
-    &::after {
-        background-image: url('../images/decor/decor-el.svg');
-        bottom: -23px;
-        right: -2px;
-        width: 65px;
-        height: 52px;
-        z-index: -1;
-
-    }
-
-    &__item {
-        background-color: #fff;
-        width: 370px;
-        padding: 60px 30px;
-        box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
-    }
-
-
-
-    &__item-title {
-        color: $title;
-        font-size: 22px;
-        @extend %roboto-400;
-        margin-top: 35px;
-        margin-bottom: 10px;
-
-    }
-
-    &__item-text {
-        max-width: 296px;
-        
-    }
-}
-
-.categories {
-    &__items {
-        display: grid;
-        min-height: 635px;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: repeat(2,1fr);
-        grid-gap: 30px
-    }
-
-    &__item {
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        padding-top: 35px;
-        padding-left: 40px;
-  
-        &:nth-child(1) {
-            grid-row: span 2;
-
-            .categories__item-subtitle,
-            .categories__item-link:hover {
-                color: #5800e4;
-            }
-
-
-        }
-
-        &:nth-child(2) {
-            grid-column: span 2;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding-top: 0;
-
-
-            .categories__item-subtitle,
-            .categories__item-link:hover {
-                color: $accent;
-            }
-            
-        }
-
-        &:nth-child(3) {
-
-            .categories__item-subtitle,
-            .categories__item-link:hover {
-                color:#ffb534;
-            }
-            
-        }
-
-        &:nth-child(4) {
-
-            .categories__item-subtitle,
-            .categories__item-link:hover {
-                color: #34c3ff;
-            }
-            
-        }
-    }
-
-    &__item-subtitle {
-        margin-bottom: 5px;
-    }
-
-    &__item-title {
-        font-size: 22px;
-        color: $title;
-        margin-bottom: 16px;
-
-    }
-
-    &__item-link {
-        text-transform: uppercase;
-        color: $title;
-        @extend %roboto-400;
-        transition: all .35s
-    }
-}
-
-
-.video-fashion {
-    padding: 125px 0;
-    background-color: $bg;
-    background-image: url('../images/decor/pattern.svg');
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-
-    &__inner {
-        display: flex;
-
-    }
-
-    &__popup {
-        margin-right: 60px;
-        max-width: 530px;
-        height: 480px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-
-    &__content {
-        max-width: 570px
-    }
-
-    &__subtitle {
-        font-size: 22px;
-        color: $accent;
-        padding-top: 75px;
-        margin-bottom: 5px;
-        text-transform: uppercase;
-    }
-
-    &__title {
-        text-align: left;
-
-    }
-    &__text {
-        margin-bottom: 55px;
-    }
-
-    &__link {
-        @extend %btn;
-    }
-
-}
-
-.product {
-    padding: 105px 0 120px;
-    text-align: center;
-
-    &__items {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 45px 30px
-
-    }
-
-    &__link {
-        display: inline-block;
-        padding: 15px 28px;
-        background-color: transparent;
-        @extend %roboto-400;
-        letter-spacing: 2px;
-        color: $title;
-        border: 1px solid $accent;
-        text-transform: uppercase;
-        margin-top: 55px;
-    }
-}
-
-.product-item {
-    max-width: 370px;
-    text-align: center;
-
-    &.product-item--list {
-        min-width: 100%;
-        display: flex;
-        text-align: left;
-        &:hover {
-            .product-item__link-box {
-
-                transform: translateY(-280%);
-            }
-        }
-
-        .shop-content__inner {
-           
-        }
-
-        .product-item__img-box {
-            height: 250px;
-            min-width: 200px;
-            margin-bottom: 0;
-
-            img {
-                height: 250px;
-            }
-        }
-
-        .product-item__link-box {
-            bottom: auto;
-            
-            box-shadow: none;
-            background-color: transparent;
-
-            width: 115px;
-            
-            .product-item__link {
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                background-color: #fff;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .product-item__link--line {
-                display: none;
-            }
-
-
-        }
-        
-        .product-item__content-box {
-            display: block;
-        }
-
-        .product-item__wrapper-box {
-            padding: 30px 40px;
-            border: 1px solid #ececec;
-            border-left: none;
-        }
-
-        .product-item__box{
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .product-item__title {
-            order: -1;
-            width: 100%;
-            padding: 0;
-            margin-bottom: 10px;
-            margin-top: 4px;
-        }
-
-        .product-item__price {
-            order: -1;
-            margin-left: -12px;
-        }
-
-        .star {
-            margin: 0;
-            margin-left: 20px;
-            margin-top: 2px;
-        }
-
-        .product-item__txt {
-            margin-bottom: 20px;
-        }
-
-        .product-item__btn {
-            padding: 11px 40px;
-            border: none;
-            background-color: $title;
-            color: #fff;
-            transition: all .35s;
-            
-
-            &:hover {
-                background-color: $accent;
-                box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
-
-            }
-        }
-
-
-        .product-item__img-box::before {
-            display: none;
-
-        }
-
-       
-    }
-
-
-    &__content-box {
-        display: none;
-    }
-
-
-    &:hover {
-        .product-item__link-box {
-            transform: translateY(0);
-        }
-    }
-
-    &__img-box {
-        position: relative;
-        height: 370px;
-        overflow: hidden;
-        margin-bottom: 25px;
-    }
-
-    &__images {
-     object-fit: cover;
-
-    }
-
-    &__link-box {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 50px;
-        background-color: #fff;
-        width: 220px;
-        height: 50px;
-        margin: 0 auto;
-        box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
-        border-radius: 22px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        transform: translateY(300%);
-        transition: all .3s;
-
-    }
-
-    &__link--line::before,
-    &__link--line::after{
-        content: "";
-        position: absolute;
-        height: 30px;
-        width: 1px;
-        background-color: #ececec;
-        top: 10px;
-
-    }
-
-    &__link--line::before {
-        left: 70px;
-
-    }
-
-    &__link--line::after {
-        right: 70px;
-
-    }
-
-    &__link {
-        display: inherit;
-        path  {
-            transition: all .3s;
-
-        }
-    }
-
-
-
-    &__link:hover {
-        path {
-            color: $accent;
-        }
-
-    }
-
-    &__title {
-        color: $title;
-        font-size: 22px;
-        padding: 15px 0 20px;
-    }
-
-    &__price {
-        display: flex;
-        justify-content: center;
-        @extend %roboto-400;
-
-
-    }
-
-    &__new-price {
-        padding: 0 12px;
-        color: $title;
-
-    }
-
-    &__old-price  {
-        padding: 0 12px;
-        text-decoration: line-through;
-    }
-
-    &--sale {
-        .product-item__img-box::before {
-            content: "SALE";
-            @extend %btn;
-            position: absolute;
-            left: 25px;
-            top: 25px;
-            padding: 10px;
-
-        }
-
-    }
-
-
-
-}
-
-.star {
-    margin: 0 auto;
-}
-
-.promo {
-    background-image: url('../images/promo-bg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    padding: 150px 0 160px;
-    text-align: center;
-
-    &__inner {
-        max-width: 570px;
-        width: 100%;
-        margin-left: auto;
-    }
-
-    &__subtitle {
-        color: $accent;
-        text-transform: uppercase;
-        font-size: 22px;
-        margin-bottom: 10px;
-
-    }
-
-    &__link {
-        display: inline-block;
-        padding: 15px 28px;
-        background-color: transparent;
-        @extend %roboto-400;
-        letter-spacing: 2px;
-        color: $title;
-        border: 1px solid $accent;
-        text-transform: uppercase;
-        margin-top: 55px;
-
-    }
-
-    &__clock {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 55px;
-
-    }
-
-    &__clock-item {
-        background-color: #fff;
-        height: 120px;
-        width: 120px;
-        border-radius: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
-    } 
-
-    &__clock-item span {
-        font-size: 48px;
-        @extend %roboto-700;
-        color: $title;
-        margin-top: 12px;
-        margin-bottom: 7px;
-
-    }
-
-    &__text {
-        
-    }
-}
-
-.partners {
-    padding-top: 75px;
-    &__list {
-        display: flex;
-        height: 170px;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-
-.blog {
-    padding: 50px 0 160px;
-    background-image: url('../images/blog-bg.svg');
-    background-repeat: no-repeat;
-    background-position: center center;
-
-
-    &__items {
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-
-
-        &::after {
-            content: "";
-            position: absolute;
-            background-image: url('../images/decor/blog-decor.svg');
-            right: -20px;
-            top: -25px;
-            width: 126px;
-            height: 53px;  
-            z-index: -1;      
-        }
-
-    }
-
-    &__item {
-        max-width: 370px;
-        border: 1px solid #ececec;     
-            &:hover {
-                box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
-                border: none;
-                .blog__item-link {
-                    color: $accent;
-                    &::after {
-                        background-image: url('../images/icons/arrow-hover.svg');
-                    }
-        
-                }
-            }
-        }
-    
-
-    &__item-imglink{
-        height: 280px;
-        &__img {
-            object-fit: cover;
-
-        }
-
-    }
-
-    &__item-box {
-        padding: 30px 40px;
-    }
-
-    &__item-info {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-    }
-
-    &__item-author,
-    &__item-date {
-        padding-left: 30px;
-        position: relative;
-
-        &::before {
-            position: absolute;
-            content: "";
-            height: 20px;
-            width: 20px;
-            left: 0;
-            top: 2px;
-        }
-
-    }
-
-    &__item-author::before {
-        background-image: url('../images/icons/user-grey.svg');
-        background-repeat: no-repeat;
-
-
-    }
-
-    &__item-date::before {
-        background-image: url('../images/icons/time.svg');
-        background-repeat: no-repeat;
-
-
-    }
-
-    &__item-title {
-        @extend %roboto-700;
-        color: $title;
-        font-size: 22px;
-        margin-bottom: 20px;
-    }
-
-    &__item-link {
-        position: relative;
-        transition: all .35s;
-    }
-
-    &__item-link::after {
-        content: "";
-        position: absolute;
-        width: 10px;
-        height: 8px;
-        top: 8px;
-        right: -14px;
-        background-image: url('../images/icons/arrow.svg');
-    }
-
-    
-}
 
 .page-404 {
     padding: 110px 0 120px;
