--- a/app/index.njk
+++ b/app/index.njk
@@ -28,7 +28,7 @@
 
   </main>
   
-  {# {% include 'app/module/_footer/_footer.html' %} #}
+  {% include 'app/module/_footer/_footer.html' %}
 
   
 
