--- a/app/module/_footer/_footer.scss
+++ b/app/module/_footer/_footer.scss
@@ -108,11 +108,12 @@
 }
 
 .footer-bot {
-    height: 75px;
+    min-height: 75px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
+    flex-wrap: wrap;
 
 
     &__accept-img {
@@ -122,3 +123,91 @@
 
     }
 }
+
+@media (max-width: 1050px) {
+
+    .footer-top {
+        flex-wrap: wrap;
+
+    }
+
+    .footer-top__item-form {
+        margin-top: 30px;
+        max-width: 100%;
+    }
+}
+
+
+@media (max-width: 860px) {
+
+
+    .footer-top__contact {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+
+    .footer-top__item-form {
+        margin-top: 30px;
+        max-width: 100%;
+    }
+}
+
+
+
+@media (max-width: 620px) {
+
+    .footer-bot {
+        justify-content: center;
+
+        &__copy {
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    
+
+    
+}
+
+@media (max-width: 450px) {
+
+    
+    .footer-top {
+
+        &__list {
+            display: none;
+        }
+
+        &__form {
+            flex-wrap: wrap;
+        }
+
+        &__form-input {
+            max-width: 100%;
+            margin-right: 0;
+            margin-bottom: 10px;
+        }
+
+        &__form-btn {
+            width: 100%;
+        }
+
+        &__nav {
+            margin-top: 30px;
+        }
+    }
+
+    .footer-bot {
+
+        &__accept-img {
+            margin-left: 10px;  
+        }
+    }
+    
+
+    
+}
+
+
