--- a/app/module/_header/_header.scss
+++ b/app/module/_header/_header.scss
@@ -4,6 +4,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
     }
 }
 
@@ -38,6 +39,10 @@
         @extend %roboto-700;
 
     }
+
+    &__btn {
+        display: none;
+    }
     
 }
 
@@ -69,12 +74,125 @@
 }
 
 
+
+
+
 @media(max-width: 1200px) {
-   .header {
+.header {
 
     &__inner {
         padding-right: 10px;
     }
 
-   }
 }
+}
+
+
+@media(max-width: 860px) {
+    .menu {
+        order: 1;
+        margin-left: 40px;
+        &__list {
+            position: absolute;
+            top: 140px;
+            width: 100%;
+            left: 0;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 5;
+            transform: translateY(-300%);
+            transition: all .5s ease;
+            background-color: #fff;
+        }
+
+        &__list-item + .menu__list-item {
+            padding-left: 15px;
+            
+        }
+
+        &__list-item {
+            width: 100%;
+            padding: 0 15px;
+            text-align: center;
+        }
+        &__list-link {
+            display: block;
+            width: 100%;
+            padding: 12px 0px;
+        }
+
+
+        &__btn {
+            width: 30px;
+            height: 22px;
+            border: none;
+            padding: 0;
+            background-color: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            z-index: 6;
+            cursor: pointer;
+            span {
+                width: 100%;
+                height: 3px;
+                background-color: $title;
+            }
+            &::after,
+            &::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 3px;
+                background-color: $title;
+            }
+            &::before {
+                top: 0;
+            }
+
+            &::after {
+                bottom: 0;
+            }
+        }        
+       
+    }
+
+    .user-nav {
+        margin-left: auto;
+    }
+
+    .menu__list.menu__list--active {
+            transform: translateY(0);
+            transition: all .5s ease;
+    }
+
+    
+}
+
+
+
+@media(max-width: 500px) {
+    .header {
+
+        &__inner {
+            padding-right: 0;
+        }
+    }
+    .menu {
+        order: 0;
+    }
+
+    .user-nav {
+        width: 100%;
+        margin-top: 35px;
+        justify-content: flex-end;
+        padding-right: 15px;
+    }
+
+    
+
+}
+
+
