--- a/app/module/_categories-info/_categories-info.scss
+++ b/app/module/_categories-info/_categories-info.scss
@@ -148,3 +148,115 @@
 
     }
 }
+
+@media(max-width: 1200px) {
+    .info {
+
+        &__item {
+            padding: 20px 20px;
+            width: 340px;
+        }
+    }
+}
+
+@media(max-width: 1100px) {
+    .info {
+        display: block;
+
+        &__item {
+            padding: 20px 20px;
+            width: 100%;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        &__item-title {
+            margin: 20px 0 10px;
+        }
+
+        &__item-text {
+            max-width: none;
+        }
+    }
+
+    .categories {
+
+        &__items {
+            grid-template-columns: repeat(2,1fr);
+            grid-template-rows: auto;
+
+        }
+
+        &__item {
+            background-position: center top;
+            &:nth-child(1) {
+                grid-row: auto;
+            }
+
+            &:nth-child(2) {
+                grid-column: auto;
+                background-position: center right;
+            }
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .categories {
+        &__items {
+            min-height: 385px;
+        }
+        &__item {
+            background-image: none !important;
+            justify-content: center;
+            padding-left: 15px;
+            padding-top: 0;
+            display: flex;
+            flex-direction: column;
+            &:nth-child(1) {
+                background-color: #f4dff0;
+
+            }
+            &:nth-child(2) {
+                background-color: #d7efef;
+
+            }
+            &:nth-child(3) {
+                background-color: #fff6a7
+
+            }
+            &:nth-child(4) {
+                background-color: #ededed;
+
+            }
+        }
+    }
+}
+
+
+@media(max-width: 620px) {
+    .categories {
+        grid-gap: 10px;
+
+        &__items {
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        &__item {
+            padding: 15px 10;
+        }
+
+        &__info {
+            padding: 120px 0 60px;
+        }
+    }
+}
+
+@media(max-width: 375px) {
+    .info {
+        &__item-title {
+            font-size: 20px;
+        }
+        
+    }
+}
