--- a/app/module/_promo/_promo.scss
+++ b/app/module/_promo/_promo.scss
@@ -64,3 +64,35 @@
 
     
 }
+
+@media(max-width: 620px)  {
+    .promo {
+        padding: 60px 0;
+
+        &__clock {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        &__clock-item {
+            margin: 20px 35px;
+        }
+    }
+
+
+}
+
+@media(max-width: 450px)  {
+    .promo {
+        &__clock-item {
+            margin: 8px;
+        }
+
+        &__clock {
+            margin-top: 30px;
+        }
+
+        &__link {
+            margin-top: 30px;
+        }
+    }
+}
