--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -48,6 +48,7 @@
         margin-bottom: 20px;
         font-size: 48px;
         margin-bottom: 40px;
+        line-height: 52px;
 
     }
 
@@ -79,6 +80,21 @@
         margin-right: 30px;
     }
 
+
+
+}
+
+.shop-filter__btn {
+    display: none;
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    width: 35px;
+    height: 35px;
+    position: fixed;
+    right: 0;
+    z-index: 5;
+    cursor: pointer;
 }
 
 .filter {
@@ -96,6 +112,7 @@
         @extend %roboto-400;
         margin-bottom: 25px;
     }
+   
 }
 
 .filter-search {
@@ -438,7 +455,7 @@
         align-items: center;
 
         span {
-            padding-left: 8px;
+            padding-left: 30px;
             color: $title;
             font-size: 22px;
         }
